# CMRemote

./: .gitignore  README.md  ROADMAP.md  Remotely.sln  SECURITY.md  THIRD_PARTY_NOTICES.md
.github/: dependabot.yml
.github/workflows/: codeql.yml  desktop-e2e-lab.yml  fuzz.yml  gitleaks.yml  postgresql-integration.yml  release.yml  run_tests.yml  rust.yml  scorecard.yml  supply-chain.yml
Agent/: Program.cs
Agent/Interfaces/: IInstalledApplicationsProvider.cs  IPackageProvider.cs
Agent/Services/: AgentHubConnection.cs  CompositePackageProvider.cs  NotSupportedInstalledApplicationsProvider.cs  NotSupportedPackageProvider.cs
Desktop.Win/: Desktop.Win.csproj
Migration.Cli/: Migration.Cli.csproj  Program.cs
Migration.Legacy/: ILegacyRowReader.cs  ILegacyRowWriter.cs  ILegacySchemaInspector.cs  IMigrationRunner.cs  IRowConverter.cs  LegacyDbProvider.cs  LegacyDbProviderDetector.cs  LegacySchemaInspector.cs  LegacySchemaVersion.cs  Migration.Legacy.csproj  MigrationOptions.cs  MigrationReport.cs  MigrationRunner.cs
Migration.Legacy/Converters/: AspNetUserRowConverter.cs  DeviceRowConverter.cs  OrganizationRowConverter.cs
Migration.Legacy/Readers/: LegacyAspNetUserReader.cs  LegacyDeviceReader.cs  LegacyKeysetSql.cs  LegacyOrganizationReader.cs
Migration.Legacy/Sources/: LegacyAspNetUser.cs  LegacyDevice.cs  LegacyOrganization.cs
Migration.Legacy/Writers/: LegacyDeviceWriter.cs  LegacyOrganizationWriter.cs  LegacyUserWriter.cs  PostgresWriterRuntime.cs
Server/: Program.cs  Server.csproj
Server/API/: AgentUpgradeExportController.cs  BrandingController.cs  ClientDownloadsController.cs  CustomBinariesController.cs  DevicesController.cs  HealthCheckController.cs  LoginController.cs  OrganizationManagementController.cs  RemoteControlController.cs  ScriptResultsController.cs  ScriptingController.cs  UploadedMsiDownloadController.cs
Server/Auth/: ApiAuthorizationFilter.cs  ExpiringTokenFilter.cs  OrganizationAdminRequirementHandler.cs  PackageManagerRequirement.cs  PackageManagerRequirementHandler.cs  PolicyNames.cs  ServerAdminRequirementHandler.cs  SignedMsiTokenFilter.cs  TwoFactorRequiredHandler.cs
Server/Components/: App.razor  _Imports.razor
Server/Data/: AppDb.cs
Server/Hubs/: AgentHub.cs  CircuitConnection.cs
Server/Middleware/: SecurityHeadersMiddleware.cs  SetupRedirectMiddleware.cs
Server/PackageManager/: PackageManagerDeviceFilter.cs
Server/Pages/: Viewer.cshtml.cs
Server/Services/: AuthService.cs  DataService.cs  ISetupStateService.cs  InstalledApplicationsService.cs  PackageInstallJobRateLimiter.cs  PackageInstallJobService.cs  PackageService.cs  SetupStateService.cs  SignedMsiUrlService.cs  UploadedMsiService.cs
Shared/Dtos/: AgentIceCandidateDto.cs  AgentSdpAnswerDto.cs  AgentSignallingLimits.cs  DesktopTransportResultDto.cs  IceCandidateDto.cs  IceServerConfigDto.cs  IceServerDto.cs  InstalledApplicationsResultDto.cs  PackageInstallRequestDto.cs  PackageInstallResultDto.cs  ProvideIceServersRequestDto.cs  SdpAnswerDto.cs  SdpOfferDto.cs  UninstallApplicationResultDto.cs
Shared/Entities/: AgentUpgradeStatus.cs  AuditLogEntry.cs  BundleItem.cs  DeploymentBundle.cs  DeviceInstalledApplicationsSnapshot.cs  Organization.cs  Package.cs  PackageInstallJob.cs  PackageInstallResult.cs  UploadedMsi.cs
agent-rs/: .gitignore  Cargo.toml  README.md  deny.toml  rust-toolchain.toml
agent-rs/crates/cmremote-agent/: Cargo.toml
agent-rs/crates/cmremote-agent/src/: cli.rs  config.rs  lib.rs  logging.rs  main.rs  runtime.rs
agent-rs/crates/cmremote-agent/src/dispatch/: mod.rs
agent-rs/crates/cmremote-agent/src/handlers/: agent_update.rs  apps.rs  desktop.rs  device_info.rs  mod.rs  packages.rs  script.rs
agent-rs/crates/cmremote-agent/src/transport/: backoff.rs  connect.rs  mod.rs  session.rs  signalling.rs
agent-rs/crates/cmremote-agent/tests/: transport_loopback.rs
agent-rs/crates/cmremote-platform/: Cargo.toml
agent-rs/crates/cmremote-platform-linux/: Cargo.toml
agent-rs/crates/cmremote-platform-linux/src/: capture.rs  encoder.rs  input.rs  lib.rs  notification.rs  providers.rs
agent-rs/crates/cmremote-platform-macos/: Cargo.toml
agent-rs/crates/cmremote-platform-macos/src/: capture.rs  encoder.rs  input.rs  lib.rs  notification.rs  providers.rs
agent-rs/crates/cmremote-platform-windows/: Cargo.toml
agent-rs/crates/cmremote-platform-windows/src/: capture.rs  encoder.rs  input.rs  lib.rs  notification.rs  providers.rs  session.rs
agent-rs/crates/cmremote-platform/src/: apps.rs  desktop.rs  lib.rs  linux.rs  linux_apps.rs  packages.rs  stubs.rs
agent-rs/crates/cmremote-platform/src/desktop/: consent.rs  encoder_sink.rs  guards.rs  input.rs  media.rs  mod.rs  notification.rs  nv12.rs  providers.rs  pump.rs  session.rs  signalling_egress.rs  webrtc.rs  webrtc_pc.rs  webrtc_track.rs
agent-rs/crates/cmremote-webrtc-crypto-spike/: Cargo.toml  README.md
agent-rs/crates/cmremote-webrtc-crypto-spike/src/: lib.rs
agent-rs/crates/cmremote-webrtc-crypto-spike/tests/: round_trip.rs  rsa_sha1_sig.hex  rsa_test_key.hex
agent-rs/crates/cmremote-wire/: Cargo.toml
agent-rs/crates/cmremote-wire/fuzz/: .gitignore  Cargo.toml  README.md
agent-rs/crates/cmremote-wire/fuzz/fuzz_targets/: fuzz_connection_info_json.rs  fuzz_hub_envelope_json.rs  fuzz_hub_envelope_msgpack.rs
agent-rs/crates/cmremote-wire/src/: connection_info.rs  desktop.rs  dispatch.rs  envelope.rs  error.rs  framing.rs  handshake.rs  lib.rs  msgpack.rs  package.rs  script.rs
agent-rs/crates/cmremote-wire/src/desktop/: mod.rs  signalling.rs
agent-rs/crates/cmremote-wire/tests/: proptest_parsers.proptest-regressions  proptest_parsers.rs  vectors.rs
agent-rs/packaging/: README.md
agent-rs/packaging/macos/: build-pkg.sh  ca.crashmedia.cmremote.agent.plist
agent-rs/packaging/systemd/: agent.env.sample  cmremote-agent.service  postinst.sh  prerm.sh
agent-rs/packaging/wix/: main.wxs
docs/: Migration.md  Setup-Wizard.md  operator-deployment-runbook.md  publisher-manifest.md  publisher-manifest.schema.json  threat-model.md  wire-protocol.md
(+222 files in other folders)
