# Source: CMRemote, clean-room implementation.
# Workspace manifest for the CMRemote Rust agent (Module 2b of the
# clean-room separation track described in ROADMAP.md).
#
# This is the R0 scaffold slice: structure, logging, configuration, and
# CI plumbing only. No network I/O is implemented yet — the connection
# loop is added in slice R2.

[workspace]
resolver = "2"
members = [
    "crates/cmremote-wire",
    "crates/cmremote-platform",
    "crates/cmremote-agent",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
license = "MIT"
repository = "https://github.com/CrashMediaIT/CMRemote"
authors = ["CMRemote contributors"]

[workspace.dependencies]
# Async runtime + utilities.
tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "fs", "io-util"] }
futures = "0.3"

# Serialization.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# MessagePack codec for the alternate hub-protocol transport (slice R1b).
rmp-serde = "1.3"

# Logging / diagnostics.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Error handling.
thiserror = "1.0"
anyhow = "1.0"

# Misc.
uuid = { version = "1.10", features = ["v4", "serde"] }
once_cell = "1.20"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
