# Source: CMRemote, clean-room implementation.
# Workspace manifest for the CMRemote Rust agent (Module 2b of the
# clean-room separation track described in ROADMAP.md).
#
# This is the R0 scaffold slice: structure, logging, configuration, and
# CI plumbing only. No network I/O is implemented yet — the connection
# loop is added in slice R2.

[workspace]
resolver = "2"
members = [
    "crates/cmremote-wire",
    "crates/cmremote-platform",
    "crates/cmremote-agent",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
license = "MIT"
repository = "https://github.com/CrashMediaIT/CMRemote"
authors = ["CMRemote contributors"]

[workspace.dependencies]
# Async runtime + utilities.
tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "fs", "io-util", "net", "process"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }

# Serialization.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# MessagePack codec for the alternate hub-protocol transport (slice R1b).
rmp-serde = "1.3"

# Logging / diagnostics.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Error handling.
thiserror = "1.0"
anyhow = "1.0"

# Misc.
uuid = { version = "1.10", features = ["v4", "serde"] }
once_cell = "1.20"

# WebSocket transport for slice R2 — connection / heartbeat loop.
# `rustls-tls-webpki-roots` selects the rustls + webpki-roots feature
# combo so we never link OpenSSL or `ring` (banned in `deny.toml`).
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "handshake", "rustls-tls-webpki-roots"] }
# rustls is pulled in transitively by tokio-tungstenite; we depend on
# it explicitly here so we can pin the `aws_lc_rs` crypto provider
# feature without relying on a transitive default. This satisfies the
# Track-S deny.toml ban on `ring` while keeping the crypto provider
# entirely in safe-Rust + audited C (`aws-lc-sys`).
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "aws_lc_rs"] }
# HTTPS client used by slice R6's `ReqwestArtifactDownloader` to
# stream-download MSI / Executable artifacts and the M3 agent
# self-update payload. Feature set is deliberately narrow:
# `rustls-tls-webpki-roots-no-provider` selects rustls + the
# Mozilla webpki root set without picking a crypto provider, so
# the application installs `aws-lc-rs` explicitly at startup
# (see `cmremote_agent::runtime`). This satisfies the Track-S
# `deny.toml` ban on `ring`.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots-no-provider", "stream", "http2"] }
# Random number generator backing the jittered exponential backoff.
# `default-features = false` drops `rand_chacha` so we don't pull in
# crates we don't need; `std_rng` is enough for jitter.
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }

# Property-based testing (Track S / S4). Used only in `[dev-dependencies]`
# — never linked into release binaries.
proptest = "1.5"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

# ---------------------------------------------------------------------------
# Patches — supply-chain pins.
# ---------------------------------------------------------------------------
# Pins `webrtc-dtls` to the CMRemote fork that swaps the upstream `ring`
# dependency for `aws-lc-rs`, per ADR 0001 Option B
# ([`docs/decisions/0001-webrtc-crypto-provider.md`](../docs/decisions/0001-webrtc-crypto-provider.md))
# and Step 8 of the fork-creation runbook
# ([`docs/decisions/0001-spike-fork-instructions.md`](../docs/decisions/0001-spike-fork-instructions.md)).
#
# The patch is dormant until a workspace crate pulls in `webrtc-dtls`
# (directly or transitively via the upstream `webrtc` crate); landing
# it here ahead of the driver wiring locks in the supply-chain seam so
# the eventual driver PR cannot accidentally pull stock `webrtc-dtls`
# (which would re-introduce `ring` and trip the `[bans].deny` entry in
# `deny.toml`). Update the tag in lockstep with the fork's
# `v<upstream>-cmremote.<rev>` cadence (see Step 9 of the runbook).
[patch.crates-io]
# Pins `webrtc-dtls` to the CMRemote fork tagged `v0.5.4-cmremote.1`,
# which is the fork's first release after Step 7 of the runbook
# ([`docs/decisions/0001-spike-fork-instructions.md`](../docs/decisions/0001-spike-fork-instructions.md)).
# Bump the tag in lockstep with the fork's `v<upstream>-cmremote.<rev>`
# rebase cadence (Step 9 of the runbook); after editing this entry,
# run `cargo update -p webrtc-dtls` so the lock-file picks up the new
# commit. The `[bans].deny` entry on `ring` in `deny.toml` is the
# load-bearing assertion that this pin is honouring Option B and
# **must not** be touched alongside a pin bump.
webrtc-dtls = { git = "https://github.com/CrashMediaIT/webrtc-cmremote.git", tag = "v0.5.4-cmremote.1" }
