# Source: CMRemote, clean-room implementation.
# Workspace manifest for the CMRemote Rust agent (Module 2b of the
# clean-room separation track described in ROADMAP.md).
#
# This is the R0 scaffold slice: structure, logging, configuration, and
# CI plumbing only. No network I/O is implemented yet — the connection
# loop is added in slice R2.

[workspace]
resolver = "2"
members = [
    "crates/cmremote-wire",
    "crates/cmremote-platform",
    "crates/cmremote-platform-windows",
    "crates/cmremote-agent",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
license = "MIT"
repository = "https://github.com/CrashMediaIT/CMRemote"
authors = ["CMRemote contributors"]

[workspace.dependencies]
# Async runtime + utilities.
tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "fs", "io-util", "net", "process"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }

# Serialization.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# MessagePack codec for the alternate hub-protocol transport (slice R1b).
rmp-serde = "1.3"

# Logging / diagnostics.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Error handling.
thiserror = "1.0"
anyhow = "1.0"

# Misc.
uuid = { version = "1.10", features = ["v4", "serde"] }
once_cell = "1.20"

# WebSocket transport for slice R2 — connection / heartbeat loop.
# `rustls-tls-webpki-roots` selects the rustls + webpki-roots feature
# combo so we never link OpenSSL or `ring` (banned in `deny.toml`).
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "handshake", "rustls-tls-webpki-roots"] }
# rustls is pulled in transitively by tokio-tungstenite; we depend on
# it explicitly here so we can pin the `aws_lc_rs` crypto provider
# feature without relying on a transitive default. This satisfies the
# Track-S deny.toml ban on `ring` while keeping the crypto provider
# entirely in safe-Rust + audited C (`aws-lc-sys`).
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "aws_lc_rs"] }
# HTTPS client used by slice R6's `ReqwestArtifactDownloader` to
# stream-download MSI / Executable artifacts and the M3 agent
# self-update payload. Feature set is deliberately narrow:
# `rustls-tls-webpki-roots-no-provider` selects rustls + the
# Mozilla webpki root set without picking a crypto provider, so
# the application installs `aws-lc-rs` explicitly at startup
# (see `cmremote_agent::runtime`). This satisfies the Track-S
# `deny.toml` ban on `ring`.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots-no-provider", "stream", "http2"] }
# Random number generator backing the jittered exponential backoff.
# `default-features = false` drops `rand_chacha` so we don't pull in
# crates we don't need; `std_rng` is enough for jitter.
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }

# Property-based testing (Track S / S4). Used only in `[dev-dependencies]`
# — never linked into release binaries.
proptest = "1.5"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

# ---------------------------------------------------------------------------
# Patches — supply-chain pins.
# ---------------------------------------------------------------------------
# Pins the four `needs-fork` members of the upstream `webrtc-rs/webrtc`
# workspace (`webrtc`, `dtls`, `stun`, `turn` — historically known as
# `webrtc-dtls`/`webrtc-stun`/`webrtc-turn` pre-v0.17, but renamed to
# bare names in upstream's v0.17.0 workspace) to
# the CMRemote monorepo fork that swaps `ring` for `aws-lc-rs`, per
# ADR 0001 Option B
# ([`docs/decisions/0001-webrtc-crypto-provider.md`](../docs/decisions/0001-webrtc-crypto-provider.md))
# and Steps 10–17 of the fork-creation runbook
# ([`docs/decisions/0001-spike-fork-instructions.md`](../docs/decisions/0001-spike-fork-instructions.md)).
#
# The fork follows Option L2 from the slice R7.l audit
# ([`docs/decisions/0001-webrtc-crate-graph-audit.md`](../docs/decisions/0001-webrtc-crate-graph-audit.md)
# §"Recommended fork repository layout"): a single repository
# (`CrashMediaIT/webrtc-cmremote`) mirroring upstream's workspace
# layout, with each forked sub-crate living in its own member
# directory (`webrtc/`, `dtls/`, `stun/`, `turn/`) of that monorepo
# at a shared tag.
#
# The four patch entries are dormant until a workspace crate pulls in
# the umbrella `webrtc` crate (directly or transitively); landing them
# here ahead of the driver wiring locks in the supply-chain seam so
# the eventual R7.m driver PR cannot accidentally pull a stock
# `webrtc*` crate (which would re-introduce `ring` and trip the
# `[bans].deny` entry in `deny.toml`). Update the tag in lockstep
# with the fork's `v<upstream>-cmremote.<rev>` cadence (see Step 18
# of the runbook).
#
# The `[bans].deny` entry on `ring` in `deny.toml` is the
# load-bearing assertion that these pins are honouring Option B and
# **must not** be touched alongside a tag bump. Likewise, the
# `[sources].allow-git` entry in `deny.toml` is per-host (not
# per-tag), so a tag bump needs no `deny.toml` change.
#
# After editing any tag below, run `cargo update -p webrtc -p dtls
# -p stun -p turn` so the lock-file picks up the new commit. (These
# bare names are the actual upstream package names at v0.17; the
# legacy `webrtc-dtls`/`webrtc-stun`/`webrtc-turn` names are the
# pre-v0.17 names and `cargo update -p webrtc-dtls` will fail with
# "did not match any packages" against the v0.17 monorepo fork.)
[patch.crates-io]
# Slice R7.l/R7.m — monorepo fork tagged `v0.17.0-cmremote.1`, the
# fork's first release after Step 16 of the runbook. Because the
# fork mirrors upstream's workspace layout, cargo clones the
# repository once and discovers each named member by walking the
# fork's `[workspace.members]`; no per-entry `path = "..."`
# selector is needed (cargo rejects `git` + `path` as ambiguous).
#
# The previous dormant `webrtc-dtls = { …, tag = "v0.5.4-cmremote.1" }`
# entry is superseded: the v0.17 dtls crate lives at the `dtls/`
# member of the new tag and is published to crates.io under its
# bare name `dtls` (upstream renamed `webrtc-dtls` → `dtls` in
# v0.17 — same story for `webrtc-stun`/`webrtc-turn` → `stun`/`turn`;
# the umbrella `webrtc` crate name is unchanged). The v0.5.4 fork
# branch / tag remain immutable on the same repo for git-history /
# audit purposes (see runbook Step 10).
#
# Patch keys must match the package name on crates.io that is being
# patched (cargo error: "does not appear to contain any packages
# matching the name `<name>`"), so the keys below are the bare
# v0.17 names, not the legacy `webrtc-*` aliases.
webrtc = { git = "https://github.com/CrashMediaIT/webrtc-cmremote.git", tag = "v0.17.0-cmremote.1" }
dtls   = { git = "https://github.com/CrashMediaIT/webrtc-cmremote.git", tag = "v0.17.0-cmremote.1" }
stun   = { git = "https://github.com/CrashMediaIT/webrtc-cmremote.git", tag = "v0.17.0-cmremote.1" }
turn   = { git = "https://github.com/CrashMediaIT/webrtc-cmremote.git", tag = "v0.17.0-cmremote.1" }
