# Source: CMRemote, clean-room implementation.
[package]
name = "cmremote-platform"
description = "OS-abstraction traits and providers for the CMRemote Rust agent."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = "0.10"
uuid = { workspace = true }

# Async trait for the package provider so the orchestrator can plug
# in async install paths once the signed-build pipeline lands.
async-trait = "0.1"
# Slice R6 process-runner default uses tokio::process; we intentionally
# scope to the features cmremote-platform needs (process + io-util for
# stdout/stderr capture, sync for tests, time for the exec timeout).
tokio = { workspace = true }
# Slice R6 HTTPS artifact downloader. rustls + aws-lc-rs only, no `ring`
# (banned in `deny.toml`). The crypto provider is installed by the
# agent binary at startup; this crate just publishes the trait impl.
reqwest = { workspace = true }
futures-util = { workspace = true }
# Direct dep so we can install the `aws-lc-rs` crypto provider at
# startup. The same version is pinned at the workspace level via
# tokio-tungstenite's TLS feature set.
rustls = { workspace = true }
cmremote-wire = { path = "../cmremote-wire" }

[dev-dependencies]
tempfile = "3.13"
