# Source: CMRemote, clean-room implementation.
#
# R7.f Option B feasibility-spike PoC (deliverable #2).
#
# This crate is the *running-code* counterpart to the
# `ring` -> `aws-lc-rs` symbol-mapping report at
# `docs/decisions/0001-spike-report.md`. It ports the exact `ring`
# call sites used by `webrtc-rs/dtls@v0.5.4 src/crypto/mod.rs` onto
# `aws-lc-rs` and proves — with `cargo test` — that every symbol from
# the report round-trips end-to-end.
#
# Scope deliberately matches the report's enumerated surface only;
# this is *not* a WebRTC driver. The actual fork lives in the to-be-
# created `CrashMediaIT/webrtc-cmremote` repository per
# `docs/decisions/0001-spike-fork-instructions.md`.
[package]
name = "cmremote-webrtc-crypto-spike"
description = "R7.f spike PoC: webrtc-dtls ring call sites ported to aws-lc-rs."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
# The whole point of the spike. Pin to the same major as rustls 0.23's
# `aws_lc_rs` feature already locks in via the workspace, so we get a
# single version of `aws-lc-rs` in the tree.
aws-lc-rs = "1"
thiserror = { workspace = true }

[dev-dependencies]
# Used in tests as a transport of a signature blob — not part of the
# spike surface itself.
hex = "0.4"
